--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://unpkg.com/circlebars@0.1.3/src/circle.css">
+  <script src="https://unpkg.com/circlebars@0.1.3/src/circle.js"></script>
   <title>CineWave</title>
 </head>
 
